force-app/main/default/objects/Contact/fields/External_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Contact Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>