force-app/main/default/objects/Contact/fields/External_ID_Container__c.field-meta.xml
<CustomField>
    <fullName>External_ID_Container__c</fullName>
    <externalId>true</externalId>
    <label>External ID Container</label>
    <length>255</length>
    <type>Text</type>
</CustomField>