force-app/main/default/objects/Contact/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>External Id of contact to associate with external Id on Container</description>
    <externalId>true</externalId>
    <label>ExternalId</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>