force-app/main/default/objects/Contact/fields/User_Base_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Base_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>User Base Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>